# DiscordBot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  config.json.example  database.py  pyproject.toml  requirements.txt
cogs/: admin.py  button.py  earthquakeReport.py  event.py  main.py  music.py  slashCommands.py
core/: customFunction.py  get_config.py  logger.py
database/: __init__.py
extensions/: autoComplete.py  general.py  ping.py  quote.py  rock_paper_scissors.py  vote.py
utils/: eq_report_util.py
